# hiitl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
docs-site/: mint.json
patterns/: README.md  _schema.yaml
python/: README.md  pyproject.toml  requirements.txt
python/hiitl/: __init__.py
python/hiitl/core/: __init__.py  evaluator.py  route_types.py  types.py
python/hiitl/core/tests/: __init__.py  test_error_handling.py  test_evaluator.py  test_route_types.py
python/hiitl/core/tests/conformance/: __init__.py  test_conformance.py
python/hiitl/sdk/: __init__.py  audit.py  circuit_breaker.py  client.py  config.py  exceptions.py  http_client.py  policy_loader.py  rate_limiter.py  route_loader.py  sync_cache.py  sync_client.py  sync_engine.py  telemetry.py
python/hiitl/sdk/tests/: TEST_DESIGN.md  __init__.py  test_audit.py  test_client.py  test_config.py  test_exceptions.py  test_hosted.py  test_policy_loader.py  test_rate_limiter.py  test_route_loader.py  test_sync.py  test_telemetry.py
python/hiitl/sdk/tests/fixtures/: invalid_json.json  invalid_schema.json  invalid_yaml.yaml  valid_policy.json  valid_policy.yaml  wrapped_policy.json
python/hiitl/server/: main.py  requirements.txt
python/hiitl/synthetic/: __init__.py  __main__.py  agent_loader.py  assertions.py  cli.py  envelope_factory.py  executor.py  grader.py  report.py  scenario_loader.py  types.py
python/hiitl/synthetic/tests/: TEST_DESIGN.md  test_assertions.py  test_cli.py  test_envelope_factory.py  test_executor.py  test_grader.py
synthetic/: README.md
(+185 files in other folders)
